[package]
name = "areum"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["dongjak"]

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap = { version = "4.4.8", features = ["derive"] }
deno_core = { workspace = true }
globset = "0.4.13"
lightningcss = { version = "1.0.0-alpha.51", features = ["visitor"] }
lol_html = "1.2.0"
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.108"
serde_v8 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
walkdir = "2.4.0"
dongjak = { path = "./dongjak" }
axum = "0.7.2"
lazy_static = "1.4.0"
sha2 = "0.10.8"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
deno_core = "0.238.0"
deno_runtime = "0.137.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_v8 = "0.147.0"
tokio = "1.34.0"
url = "2.4.1"

[patch.crates-io]
deno_http = {git = "https://github.com/denoland/deno.git"} # for hyper version compat
