[package]
name = "areum"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["dongjak"]

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap = { version = "4.4.8", features = ["derive"] }
deno_core = { workspace = true }
lightningcss = { version = "1.0.0-alpha.51", features = ["visitor"] }
lol_html = "1.2.0"
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.108"
serde_v8 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
dongjak = { path = "./dongjak" }
axum = "0.7.3"
notify = "6.1.1"
ignore = "0.4.21"
bs58 = "0.5.0"
blake2 = "0.10.6"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
deno_core = "0.247.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_v8 = "0.156.0"
tokio = "1.35.1"
url = "2.4.1"
