[package]
name = "dongjak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
deno_ast = { version = "0.31.6", features = ["transpiling"] }
deno_core = "0.238.0"
deno_emit = "0.32.0"
deno_graph = "0.62.3"
deno_runtime = "0.136.0"
rand = "0.8.5"
reqwest = "0.11.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_v8 = "0.147.0"
tokio = "1.34.0"
url = "2.4.1"
mdxjs = "0.1.20"
