[package]
name = "dongjak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
deno_ast = { version = "0.31.6", features = ["transpiling"] }
deno_core = { workspace = true }
deno_emit = "0.32.0"
deno_graph = "0.62.3"
deno_runtime = { workspace = true }
rand = "0.8.5"
reqwest = "0.11.20"
serde = { workspace = true, features = ["derive"] }
serde_v8 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
mdxjs = "0.1.20"
erased-serde = "0.4.1"
